--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+  <%= render partial: "shared/navbar"%>
+  <div class="container">
+    <% render partial: "shared/flash" %>
     <%= yield %>
+    </div>
   </body>
 </html>
